[package]
name = "relink-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "1.1.0", default-features = true, features = ["derive", "runtime"] }
k8s-openapi = { version = "0.25.0", default-features = false, features = ["v1_33"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
